<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bgAct"
              android:orientation="vertical">

    <include layout="@layout/include_topbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:src="@drawable/ic_login_tx"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">


                <ImageButton
                    android:id="@+id/login_btn_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sx"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:textColor="@color/white"
                    android:visibility="visible"/>

                <Spinner
                    android:id="@+id/login_sp_db"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/login_btn_get"
                    android:background="@drawable/bg_repertory_xl">

                </Spinner>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_input_un"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_ed_un"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_login_yhm"
                    android:drawablePadding="5dp"
                    android:hint="@string/userName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/textSize"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_input_pwddd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_ed_pwddd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_login_mm"
                    android:drawablePadding="5dp"
                    android:hint="@string/pwddd"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/textSize"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_btn_login"
                style="@style/btnStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="18dp"
                android:text="@string/login"/>

            <Button
                android:id="@+id/login_btn_offline"
                style="@style/btnStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="18dp"
                android:text="@string/offline"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>